# yippieblox-mcp-server

./: .gitignore  CLAUDE.md  README.md  improve_tool_description.md
.github/workflows/: release.yml
plugin/: README.md  build_plugin.sh
plugin/YippieBlox/: bridge.lua  init.server.lua  playtest_bridge_source.lua
plugin/YippieBlox/tools/: capture.lua  checkpoint.lua  init.lua  logs.lua  npc_driver.lua  playtest.lua  run_script.lua  virtualuser.lua
plugin/YippieBlox/ui/: command_trace.lua  widget.lua
plugin/YippieBlox/util/: ring_buffer.lua
server/: Cargo.toml  README.md
server/src/: bridge_http.rs  captures.rs  config.rs  main.rs  mcp_stdio.rs  state.rs  types.rs
