[package]
name = "roblox-studio-yippieblox-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server bridging AI coding assistants with Roblox Studio"

[[bin]]
name = "roblox-studio-yippieblox-mcp-server"
path = "src/main.rs"

[[bin]]
name = "mcpctl"
path = "src/bin/mcpctl.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
